Sutter Health/src/objects/Zip_Code_Master__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_1__c</fullName>
        <label>County 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_2__c</fullName>
        <label>County 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_3__c</fullName>
        <label>County 3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <formula>IF(AND(ISBLANK( County_1__c) ,  ISBLANK(County_2__c) ,  ISBLANK(County_3__c )),null,
  IF(AND(ISBLANK( County_1__c) ,  ISBLANK(County_2__c)), County_3__c ,
    IF(AND(ISBLANK( County_1__c) ,  ISBLANK(County_3__c)), County_2__c ,
      IF(AND(ISBLANK( County_2__c) ,  ISBLANK(County_3__c)), County_1__c ,
        IF( ISBLANK( County_1__c ) ,  County_2__c  &amp; &apos; / &apos;  &amp; County_3__c  ,  
         IF( ISBLANK( County_2__c ) ,  County_1__c &amp; &apos; / &apos;  &amp;County_3__c ,  
          IF( ISBLANK( County_3__c ) ,  County_1__c &amp; &apos; / &apos;  &amp;County_2__c ,  
             County_1__c &amp; &apos; / &apos;  &amp; County_2__c &amp; &apos; / &apos;  &amp;County_3__c 
            ) 
           )
          )
         ) 
        )
       )
      )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_code__c</fullName>
        <label>Zip code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Zip Code Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>County_1__c</columns>
        <columns>County_2__c</columns>
        <columns>County_3__c</columns>
        <columns>City__c</columns>
        <columns>Region__c</columns>
        <columns>Zip_code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Z-{0000}</displayFormat>
        <label>Zip Code Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zip Codes Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>